--- a/templates/error404.html
+++ b/templates/error404.html
@@ -1,3 +1,30 @@
 {% include 'header.html' %}
-<img src="https://miro.medium.com/max/800/1*hFwwQAW45673VGKrMPE2qQ.png" alt="error">
+<section class="category__area pt-105 pb-135">
+    <div class="container">
+       <div class="row">
+          <div class="col-xxl-12">
+             <div class="section__title-wrapper text-center mb-60">
+                <h2 class="section__title">ERROR 404</h2>
+                <p>Wrong URL or you are not authorized to visit this page.</p>
+             </div>
+          </div>
+       </div>
+
+       <div class="row">
+         <div class="col-xxl-12">
+            <div class="category__more mt-30 text-center">
+               <a href="{% url 'home' %}" class="m-btn m-btn-2"> <span></span> Back to Home</a>
+            </div>
+         </div>
+      </div>
+
+      <div class="row">
+         <div class="col-xxl-12">
+            <div class="category__more mt-30 text-center">
+               <a href="{% url 'login' %}" class="m-btn m-btn-2"> <span></span> Login</a>
+            </div>
+         </div>
+      </div>
+       </div>
+       </section>
 {% include 'footer.html' %}
