--- a/templates/header.html
+++ b/templates/header.html
@@ -12,23 +12,25 @@
     justify-content: space-between;
     position: absolute;
     transform: translateX(-50%);
-    top: 8%;
-    left: 50%;
-    width: calc(max-content + 50px);
-    padding: 1.3rem;
+    z-index: 1000;
+    top:5%;
+    right: -3%;
+    padding: 0.5rem;
     border-radius: 10px;
     border: 1.3px solid gray;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    background-color: rgb(228, 228, 228);
     box-shadow: 3px 4px 12px 0px rgba(0, 0, 0, 0.3);
+    
   }
-
+.popup-msg-text{
+  padding: 7px 5px 0px 5px;
+}
 </style>
 
 <script>
   let popup = document.querySelector(".popup-msg");
-  
-console.log(popup,"popup");
-if (popup){
+  if (popup){
    setTimeout(() => {
       popup.style.display="none"
    }, 3000);
@@ -65,16 +67,16 @@ if (popup){
             </nav>
           </div>
         </div>
-        {% if user.isauthenticated %}
+        {% if user.is_authenticated %}
+        {% if user.is_staff %}
         <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-8 col-6">
           <div class="header__action d-flex align-items-center justify-content-end">
             <div class="header__login d-none d-sm-block">
               <a href="{% url 'logout' %}"><i class="far fa-unlock"></i> Logout</a>
             </div>
             <div class="header__cart d-none d-sm-block">
-              <a href="javascript:void(0);" class="cart-toggle-btn">
-                <i class="far fa-shopping-cart"></i>
-                <span>3</span>
+              <a href="{% url 'dashboard' %}" class="cart-toggle-btn">
+                <i class="far fa-home"></i>
               </a>
             </div>
             <div class="sidebar__menu d-lg-none">
@@ -90,10 +92,32 @@ if (popup){
         <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-8 col-6">
           <div class="header__action d-flex align-items-center justify-content-end">
             <div class="header__login d-none d-sm-block">
+              <a href="{% url 'logout' %}"><i class="far fa-sign-out"></i> Logout</a>
+            </div>
+          
+            <div class="header__cart d-none d-sm-block">
+              <a href="{% url 'cart' %}">
+                <i class="far fa-shopping-cart"></i>
+                <span>3</span>
+              </a>
+            </div>
+            <div class="sidebar__menu d-lg-none">
+              <div class="sidebar-toggle-btn" id="sidebar-toggle">
+                <span class="line"></span>
+                <span class="line"></span>
+                <span class="line"></span>
+              </div>
+            </div>
+          </div>
+        </div>
+        {% endif %}
+        {% else %}
+        <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-8 col-6">
+          <div class="header__action d-flex align-items-center justify-content-end">
+            <div class="header__login d-none d-sm-block">
               <a href="{% url 'login' %}"><i class="far fa-unlock"></i> Log In</a>
             </div>
           </div>
-          
         </div>
         {% endif %}
       </div>
@@ -129,105 +153,7 @@ if (popup){
 </div>
 <!-- back to top end -->
 
-<!-- cart mini area start -->
-<div class="cartmini__area">
-  <div class="cartmini__wrapper">
-    <div class="cartmini__title">
-      <h4>Shopping cart</h4>
-    </div>
-    <div class="cartmini__close">
-      <button type="button" class="cartmini__close-btn">
-        <i class="fal fa-times"></i>
-      </button>
-    </div>
-    <div class="cartmini__widget">
-      <div class="cartmini__inner">
-        <ul>
-          <li>
-            <div class="cartmini__thumb">
-              <a href="product-details.html">
-                <img src="assets/img/product/sm/cart-5.jpg" alt="" />
-              </a>
-            </div>
-            <div class="cartmini__content">
-              <h5>
-                <a href="product-details.html">Findup - Directory & Listing</a>
-              </h5>
-              <div class="product-quantity mt-10 mb-10">
-                <span class="cart-minus">-</span>
-                <input class="cart-input" type="text" value="1" />
-                <span class="cart-plus">+</span>
-              </div>
-              <div class="product__sm-price-wrapper">
-                <span>2 <i class="fal fa-times"></i></span>
-                <span class="product__sm-price">$24.00</span>
-              </div>
-            </div>
-            <a href="#" class="cartmini__del"><i class="fal fa-times"></i></a>
-          </li>
-          <li>
-            <div class="cartmini__thumb">
-              <a href="product-details.html">
-                <img src="assets/img/product/sm/cart-2.jpg" alt="" />
-              </a>
-            </div>
-            <div class="cartmini__content">
-              <h5>
-                <a href="product-details.html">TechBuzz - Businesses Agency</a>
-              </h5>
-              <div class="product-quantity mt-10 mb-10">
-                <span class="cart-minus">-</span>
-                <input class="cart-input" type="text" value="1" />
-                <span class="cart-plus">+</span>
-              </div>
-              <div class="product__sm-price-wrapper">
-                <span>1 <i class="fal fa-times"></i></span>
-                <span class="product__sm-price">$17.00</span>
-              </div>
-            </div>
-            <a href="#" class="cartmini__del"><i class="fal fa-times"></i></a>
-          </li>
-          <li>
-            <div class="cartmini__thumb">
-              <a href="product-details.html">
-                <img src="assets/img/product/sm/cart-3.jpg" alt="" />
-              </a>
-            </div>
-            <div class="cartmini__content">
-              <h5>
-                <a href="product-details.html">Zibber - Agency Template</a>
-              </h5>
-              <div class="product-quantity mt-10 mb-10">
-                <span class="cart-minus">-</span>
-                <input class="cart-input" type="text" value="1" />
-                <span class="cart-plus">+</span>
-              </div>
-              <div class="product__sm-price-wrapper">
-                <span>5 <i class="fal fa-times"></i></span>
-                <span class="product__sm-price">$72.00</span>
-              </div>
-            </div>
-            <a href="#" class="cartmini__del"><i class="fal fa-times"></i></a>
-          </li>
-        </ul>
-      </div>
-      <div class="cartmini__checkout">
-        <div class="cartmini__checkout-title mb-30">
-          <h4>Subtotal:</h4>
-          <span>$113.00</span>
-        </div>
-        <div class="cartmini__checkout-btn">
-          <a href="#" class="m-btn m-btn-border mb-10 w-100">
-            <span></span> view cart</a
-          >
-          <a href="#" class="m-btn m-btn-3 w-100"> <span></span> checkout</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="body-overlay"></div>
-<!-- cart mini area end -->
+
 
 <!-- sidebar area start -->
 <div class="sidebar__area">
@@ -241,19 +167,13 @@ if (popup){
     <div class="sidebar__content">
       <div class="logo mb-40">
         <a href="index.html">
-          <img src="assets/img/logo/logo-white.png" alt="logo" />
+          <img src="{% static 'assets/img/logo/logo-white.png' %}" alt="logo" />
         </a>
       </div>
       <div class="mobile-menu"></div>
       <div class="sidebar__action mt-330">
         <div class="sidebar__login mt-15">
-          <a href="#"><i class="far fa-unlock"></i> Log In</a>
-        </div>
-        <div class="sidebar__cart mt-20">
-          <a href="javascript:void(0);" class="cart-toggle-btn">
-            <i class="far fa-shopping-cart"></i>
-            <span>2</span>
-          </a>
+          <a href="{% url 'login' %}"><i class="far fa-unlock"></i> Log In</a>
         </div>
       </div>
     </div>
