--- a/templates/theme.html
+++ b/templates/theme.html
@@ -51,7 +51,7 @@
                       <div class="product__item white-bg mb-30 wow fadeInUp" data-wow-delay=".3s">
                          <div class="product__thumb">
                             <div class="product__thumb-inner fix w-img">
-                               <a href="product-details.html">
+                               <a href="{% url 'theme_details' id=template.id %}">
                                <img src="{{template.template_image.url}}" alt="">
                                </a>
                             </div>
