--- a/templates/theme_details.html
+++ b/templates/theme_details.html
@@ -162,7 +162,7 @@
                                <span>{{theme_data.framework}}</span>
                             </li>
                          </ul>
-                         <a href="pricing.html" class="m-btn m-btn-2 w-100 mb-20"> <span></span> Add to cart</a>
+                         <a href="{% url 'add_to_cart' id=theme_data.id %}" class="m-btn m-btn-2 w-100 mb-20"> <span></span> Add to cart</a>
                          <a href="https://themeforest.net/item/zibber-business-consulting-wordpress-theme/30120392" target="_blank" class="m-btn m-btn-border w-100"> <span></span> Preview Project</a>
                       </div>
                    </div>
