--- a/templates/footer.html
+++ b/templates/footer.html
@@ -105,7 +105,7 @@
                 <div class="row">
                    <div class="col-xxl-6 col-xl-6 col-md-6">
                       <div class="footer__copyright wow fadeInUp" data-wow-delay=".5s">
-                         <p>Copyright © 2021 All Rights Reserved, Design by <a href="#">Theme Pure</a></p>
+                         <p>Copyright © 2022 All Rights Reserved, Design by <a href="#">Spell Innovation</a></p>
                       </div>
                    </div>
                    <div class="col-xxl-6 col-xl-6 col-md-6">
