--- a/templates/index.html
+++ b/templates/index.html
@@ -38,13 +38,13 @@
              <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-6">
                 <div class="hero__thumb-wrapper scene ml-70">
                    <div class="hero__thumb one d-none d-lg-block">
-                      <img class="layer" data-depth="0.2" src="{% static 'assets/img/hero/hero-1.jpg' %}" alt="">
+                      <img class="layer" data-depth="0.2" src="{% static 'assets/img/index/image_370.png' %}" alt="">
                    </div>
                    <div class="hero__thumb two">
-                      <img class="layer" data-depth="0.3" src="{% static 'assets/img/hero/hero-2.jpg' %}" alt="">
+                      <img class="layer" data-depth="0.3" src="{% static 'assets/img/index/image_260.png' %}" alt="">
                    </div>
                    <div class="hero__thumb three">
-                      <img class="layer" data-depth="0.4" src="{% static 'assets/img/hero/hero-3.jpg' %}" alt="">
+                      <img class="layer" data-depth="0.4" src="{% static 'assets/img/index/image_220.png' %}" alt="">
                    </div>
                 </div>
              </div>
@@ -96,6 +96,7 @@
     <!-- category area end -->
 
     <!-- trending area start -->
+    {% if fet_temp %}
     <section class="trending__area pt-110 pb-110 grey-bg">
        <div class="container">
           <div class="row align-items-end">
@@ -139,6 +140,7 @@
           </div>
        </div>
     </section>
+    {% endif %}
     <!-- trending area end -->
 
     <!-- subscribe area start -->
