--- a/templates/admin/sub_category.html
+++ b/templates/admin/sub_category.html
@@ -32,7 +32,7 @@
                   </td>
                   <td> {{sub_category.order}}</td>
                   <td>{{sub_category.created.date}}</td>
-                  <td><a href=""> Edit</a></td>
+                  <td><a href=""> Edit</a> | <a href="{% url 'delete_sub_category' id=sub_category.id %}"> Delete</a></td>
                 </tr>
                 {% endfor %}
               </tbody>
