--- a/templates/admin/add_template.html
+++ b/templates/admin/add_template.html
@@ -90,7 +90,6 @@
                   </select>
                 </div>
               </div>
-
               <div class="form-group">
                 <label for="exampleInputEmail1">Template Name</label>
                 <input
@@ -102,7 +101,23 @@
                   name="template_name"
                 />
               </div>
+
               <div class="form-group">
+                <label for="exampleInputEmail1">Template Details</label>
+                <textarea class="summernote" name="template_details" ></textarea>
+
+              </div>
+              <div class="form-group">
+                <label for="exampleInputEmail1">Template Features</label>
+                <textarea class="summernote" name="template_features" ></textarea>
+              </div>
+
+              <div class="form-group">
+                <label for="exampleInputEmail1">Template Layout</label>
+                <textarea class="summernote" name="template_layout" ></textarea>
+              </div>
+              
+              <!-- <div class="form-group">
                 <label for="exampleInputPassword1">Template Details</label>
                 <input
                   type="text"
@@ -134,7 +149,7 @@
                   required
                   name="template_layout"
                 />
-              </div>
+              </div> -->
               <div class="form-group">
                 <label for="exampleInputPassword1">Template Price</label>
                 <input
