--- a/templates/admin/footer.html
+++ b/templates/admin/footer.html
@@ -17,6 +17,14 @@
 <!-- Custom js for this page -->
 <script src="{% static 'admin/assets/js/dashboard.js' %}"></script>
 <script src="{% static 'admin/assets/js/todolist.js' %}"></script>
+<link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
+
+<script>
+  $(document).ready(function() {
+  $('.summernote').summernote({height:300});
+});
+</script>
 
 <script>
     $(document).ready(function(){
