--- a/templates/admin/sub_category.html
+++ b/templates/admin/sub_category.html
@@ -1,50 +1,86 @@
-{% load static %}
-{% include 'admin/nav.html' %}
+{% load static %} {% include 'admin/nav.html' %}
 <div class="main-panel">
-    <div class="col-lg-12 grid-margin stretch-card">
-        <div class="card">
-          <div class="card-body">
-            <h4 class="card-title">Sub Category</h4>
-            <table class="table table-striped">
-              <thead>
-                <tr>
-                  <th> Category</th>
-                  <th> Sub Category</th>
-                  <th> Status </th>
-                  <th> Order</th>
-                  <th>Date Added</th>
-                  <th>Action</th>
-                </tr>
-              </thead>
-              <tbody>
-                {% for sub_category in sub_category %}
-                <tr>
-                  <td class="py-1">
-                    {{sub_category.category}}
-                  </td>
-                  <td>{{sub_category.sub_category}} </td>
-                  <td>
-                    {% if sub_category.status == 0 %}
-                    inactive
-                    {% else %}
-                    active
-                    {% endif %}
-                  </td>
-                  <td> {{sub_category.order}}</td>
-                  <td>{{sub_category.created.date}}</td>
-                  <td><a href=""> Edit</a> | <a href="{% url 'delete_sub_category' id=sub_category.id %}"> Delete</a></td>
-                </tr>
-                {% endfor %}
-              </tbody>
-            </table>
-          </div>
-        </div>
+  <div class="col-lg-12 grid-margin stretch-card">
+    <div class="card">
+      <div class="card-body">
+        <h4 class="card-title">Sub Category</h4>
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th>Category</th>
+              <th>Sub Category</th>
+              <th>Status</th>
+              <th>Order</th>
+              <th>Date Added</th>
+              <th>Action</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for sub_category in sub_category %}
+            <tr>
+              <td class="py-1">{{sub_category.category}}</td>
+              <td>{{sub_category.sub_category}}</td>
+              <td>
+                {% if sub_category.status == 'active' %}
+                <label class="badge badge-gradient-success">Active</label>
+                {% else %}
+                <label class="badge badge-gradient-danger">Inactive</label>
+                {% endif %}
+              </td>
+              <td>{{sub_category.order}}</td>
+              <td>{{sub_category.created.date}}</td>
+              <td>
+                <div class="nav-item nav-profile dropdown">
+                  <a
+                    class="nav-link dropdown-toggle"
+                    id="profileDropdown"
+                    href="#"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                  >
+                    <i class="mdi mdi-table-edit"></i>
+                  </a>
+                  <div
+                    class="dropdown-menu navbar-dropdown"
+                    aria-labelledby="profileDropdown"
+                  >
+                    <a class="dropdown-item" href="{% url 'edit_sub_category' id=sub_category.id %}">
+                      <i class="mdi mdi-table-edit me-2 text-success"></i> Edit
+                      Details
+                    </a>
+                    <div class="dropdown-divider"></div>
+                    <a
+                      class="dropdown-item"
+                      href="{% url 'change_sub_cat_status' id=sub_category.id %}"
+                    >
+                      <i class="mdi mdi-table-edit me-2 text-success"></i>
+                      Change Status
+                    </a>
+
+                    <div class="dropdown-divider"></div>
+                    <a
+                      class="dropdown-item"
+                      href="{% url 'delete_sub_category' id=sub_category.id %}"
+                    >
+                      <i class="mdi mdi-logout me-2 text-primary"></i> Delete</a
+                    >
+                  </div>
+                </div>
+              </td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
       </div>
-      <span class="nav-link">
-        <a href="{% url 'add_sub_category' %}">
-        <button class="btn btn-block btn-lg btn-gradient-primary mt-4">+ Add Sub Category</button>
+    </div>
+  </div>
+  <span class="nav-link">
+    <a href="{% url 'add_sub_category' %}">
+      <button class="btn btn-block btn-lg btn-gradient-primary mt-4">
+        + Add Sub Category
+      </button>
     </a>
-    </span>
+  </span>
 </div>
 
 {% include 'admin/footer.html' %}s
