--- a/templates/admin/child_category.html
+++ b/templates/admin/child_category.html
@@ -1,50 +1,87 @@
-{% load static %}
-{% include 'admin/nav.html' %}
+{% load static %} {% include 'admin/nav.html' %}
 <div class="main-panel">
-    <div class="col-lg-12 grid-margin stretch-card">
-        <div class="card">
-            <div class="card-body">
-                <h4 class="card-title">Child Category</h4>
-                <table class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th> Child Category</th>
-                            <th> Sub Category</th>
-                            <th> Category</th>
-                            <th> Status </th>
-                            <th> Order</th>
-                            <th>Date Added</th>
-                            <th>Action</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for child_category in child_category %}
-                        <tr>
-                            <td>{{child_category.child_category}}</td>
-                            <td>{{child_category.sub_category}} </td>
-                            <td>{{child_category.sub_category.category}}</td>
-                            <td>
-                                {% if child_category.status == 0 %}
-                                inactive
-                                {% else %}
-                                active
-                                {% endif %}
-                            </td>
-                            <td> {{child_category.order}}</td>
-                            <td>{{child_category.created.date}}</td>
-                            <td><a href=""> Edit</a></td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-        </div>
+  <div class="col-lg-12 grid-margin stretch-card">
+    <div class="card">
+      <div class="card-body">
+        <h4 class="card-title">Child Category</h4>
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th>Child Category</th>
+              <th>Sub Category</th>
+              <th>Category</th>
+              <th>Status</th>
+              <th>Order</th>
+              <th>Date Added</th>
+              <th>Action</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for child_category in child_category %}
+            <tr>
+              <td>{{child_category.child_category}}</td>
+              <td>{{child_category.sub_category}}</td>
+              <td>{{child_category.sub_category.category}}</td>
+              <td>
+                {% if child_category.status == 'active' %}
+                <label class="badge badge-gradient-success">Active</label>
+                {% else %}
+                <label class="badge badge-gradient-danger">Inactive</label>
+                {% endif %}
+              </td>
+              <td>{{child_category.order}}</td>
+              <td>{{child_category.created.date}}</td>
+              <td>
+                <div class="nav-item nav-profile dropdown">
+                  <a
+                    class="nav-link dropdown-toggle"
+                    id="profileDropdown"
+                    href="#"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                  >
+                    <i class="mdi mdi-table-edit"></i>
+                  </a>
+                  <div
+                    class="dropdown-menu navbar-dropdown"
+                    aria-labelledby="profileDropdown"
+                  >
+                    <a class="dropdown-item" href="{% url 'edit_child_category' id=child_category.id %}">
+                      <i class="mdi mdi-table-edit me-2 text-success"></i> Edit
+                      Details
+                    </a>
+                    <div class="dropdown-divider"></div>
+                    <a
+                      class="dropdown-item"
+                      href="{% url 'change_child_cat_status' id=child_category.id %}"
+                    >
+                      <i class="mdi mdi-table-edit me-2 text-success"></i>
+                      Change Status
+                    </a>
+                    <div class="dropdown-divider"></div>
+                    <a
+                      class="dropdown-item"
+                      href="{% url 'delete_child_category' id=child_category.id %}"
+                    >
+                      <i class="mdi mdi-logout me-2 text-primary"></i> Delete</a
+                    >
+                  </div>
+                </div>
+              </td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
     </div>
-    <span class="nav-link">
-        <a href="{% url 'add_child_category' %}">
-            <button class="btn btn-block btn-lg btn-gradient-primary mt-4">+ Add Child Category</button>
-        </a>
-    </span>
+  </div>
+  <span class="nav-link">
+    <a href="{% url 'add_child_category' %}">
+      <button class="btn btn-block btn-lg btn-gradient-primary mt-4">
+        + Add Child Category
+      </button>
+    </a>
+  </span>
 </div>
 
 {% include 'admin/footer.html' %}s
