--- a/templates/admin/nav.html
+++ b/templates/admin/nav.html
@@ -19,7 +19,7 @@
     <div class="container-scroller">
         <nav class="navbar default-layout-navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
             <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-                <a class="navbar-brand brand-logo" href="{% url 'dashboard' %}"><img src="{% static 'admin/assets/images/logo.svg' %}" alt="logo" /></a>
+                <a class="navbar-brand brand-logo" href="{% url 'home' %}"><img src="{% static 'admin/assets/images/logo.svg' %}" alt="logo" /></a>
                 <a class="navbar-brand brand-logo-mini" href="{% url 'dashboard' %}"><img src="{% static 'admin/assets/images/logo-mini.svg' %}"
                         alt="logo" /></a>
             </div>
