--- a/templates/admin/template.html
+++ b/templates/admin/template.html
@@ -53,7 +53,7 @@
            
 
                   <td>
-                    {% if template.is_featured == 'true' %}
+                    {% if template.is_featured == True %}
                     <label class="badge badge-gradient-success">Yes</label>
                     {% else %}
                     <label class="badge badge-gradient-danger">No</label>
