--- a/templates/blog_single.html
+++ b/templates/blog_single.html
@@ -1,10 +1,11 @@
 {% include 'header.html' %}
+{% load static %}
 
 <main>
 
     <!-- bg shape area start -->
     <div class="bg-shape">
-       <img src="assets/img/shape/shape-1.png" alt="">
+       <img src="{% static 'assets/img/shape/shape-1.png' %}" alt="">
     </div>
     <!-- bg shape area end -->
 
@@ -23,26 +24,24 @@
                          <span>4 min read</span>
                       </div>
                    </div>
-                   <h2 class="page__title">Why we decide to build a collaborative UX design tools platform?</h2>
+                   <h2 class="page__title">{{blog_data.title}}</h2>
                    <div class="postbox__author-2 mt-20">
                       <ul class="d-flex align-items-center">
+                         
                          <li>
-                            <div class="postbox__author-thumb-2">
-                               <img src="assets/img/blog/author/blog-author-4.jpg" alt="">
-                            </div>
-                         </li>
-                         <li>
-                            <h6><a href="#">Justin Case</a></h6>
-                            <span><a href="#">View Profile</a></span>
+                           <span>Author</span>
+                            <h6><a href="#">spellmarket</a></h6>
+                            
                          </li>
                          <li>
-                            <h6>July 5, 2019 </h6>
-                            <span>Published</span>
+                           <span></span>
+                            <h6></h6>
                          </li>
-                         <li class="d-none d-sm-block">
-                            <h6>Join the Conversation </h6>
-                            <span>2 comments</span>
+                         <li>
+                           <span>Published</span>
+                            <h6>{{blog_data.created.date}}</h6>
                          </li>
+                         
                       </ul>
                    </div>
                 </div>
@@ -59,48 +58,10 @@
              <div class="col-xxl-8 col-xl-8 col-lg-8">
                 <div class="postbox__wrapper">
                    <div class="postbox__thumb postbox__thumb-2 fix w-img mb-30">
-                      <a href="#"><img src="assets/img/blog/big/blog-big-1.jpg" alt=""></a>
+                      <a href="#"><img src="{{blog_data.image.url}}" alt=""></a>
                    </div>
                    <div class="postbox__details mb-30">
-                      <p class="drop-cap">Here’s a scenario — you’re participating in a user test for your favorite music app. At the end of the day, design is the manipulation of stimuli and information, so working with the stimuli.</p>
-                      <p>Get stuffed mate David James Bond bleeder mush amongst bodge haggle Oxford, cup of char is faff about ummm I'm <span class="highlight"><a href="about.html">telling only a quid wellies</a></span> my lady pear shaped up the kyver, I hunky-dory some dodgy chav I don't want no agro a codswallop he legged it. Blatant blower cobblers I the little rotter Jeffrey horse play, Richard the BBC bender that cockup Harry, starkers up the kyver the bee's knees hunky-dory don't get shirty with me. Owt to do with me chap the little rotter cras starkers bugger all mate bleeder horse play David he nicked it, James Bond smashing mufty bonnet haggle Oxford knackered fanny around bog a, boot cuppa blower I don't want no agro <span class="highlight"><a href="about.html">Eaton lost the plot</a> </span> sloshed ummm I'm telling. Hanky panky Harry burke butty Charles amongst tosser you mug, lemon squeezy <span class="highlight"><a href="about.html">wellies cheesed off quaint</a></span> pardon you old wind up bevvy, bugger all mate Oxford bonnet fanny around mush smashing. Cracking goal pukka what a load of rubbish a load of old tosh sloshed that Eaton James Bond, cor blimey guvnor the full monty chinwag bamboozled matie boy tinkety tonk old fruit Jeffrey hunky-dory, say the BBC brown bread dropped a clanger happy days the bee's knees. Posh vagabond he legged it is lurgy knees up Elizabeth so I said only a quid, say smashing victoria sponge zonked grub bum bag matie boy my good sir.
-                      </p>
-                   </div>
-                   <div class="postbox__details mb-30">
-                      <h4>Words that make design go round</h4>
-                      <p>Blow off grub get stuffed mate I knackered what a load of rubbish twit, chinwag up the duff a load of old tosh bobby brolly mush, spiffing good time bender porkies ruddy bleeder. Don't get shirt with me hanky panky happy days brilliant bevvy ummm I'm telling a do one Why codswallop haggle, arse over tit lurgy car boot tinketygoal.!</p>
-                   </div>
-                   <div class="postbox__quote-2 mb-50">
-                      <blockquote>
-                         <h4>“Even if we can go very far in the detail of the user experience  terms of design, a bad copy can completely” </h4>
-                         <span>Sophie Ianiro</span>
-                      </blockquote>
-                   </div>
-                   <div class="postbox__thumb postbox__thumb-2 fix w-img mb-30">
-                      <img src="assets/img/blog/blog-2.jpg" alt="">
-                   </div>
-                   <div class="postbox__details mb-30">
-                      <p>Owt to do with me chap the little rotter cras starkers bugger all mate bleeder horse play David he nicked it, James Bond smashing mufty bonnet haggle Oxford knackered fanny around bog a, boot cuppa blower I don't want no agro Eaton lost the plot sloshed ummm I'm telling. Hanky panky Harry burke butty Charles amongst tosser you mug, <span class="highlight"><a href="about.html">lemon squeezy wellies cheesed</a></span> off quaint pardon you old wind up bevvy, bugger all mate Oxford bonnet fanny around mush smashing. Cracking goal pukka what a load of rubbish a load</p>
-                   </div>
-                   <div class="postbox__details mb-45">
-                      <h4>Introducing the new Markit</h4>
-
-                      <div class="postbox__list">
-                         <ol>
-                            <li>Amazon Handmade</li>
-                            <li>Your own stand-alone website (powered by Shopify, Weebly, Big Cartel etc)</li>
-                            <li>Your Instagram feed</li>
-                            <li>Offline at your local markets</li>
-                            <li>Plus many more channels…</li>
-                         </ol>
-                      </div>
-                   </div>
-                   <div class="postbox__tag postbox__tag-3 d-sm-flex mb-25">
-                      <h5>Tagged with:</h5>
-                      <a href="#">Business</a>
-                      <a href="#">Landing</a>
-                      <a href="#">Design</a>
-                      <a href="#">UI/UX</a>
+                      <p class="drop-cap">{{blog_data.blog|safe}}</p>
                    </div>
                    <div class="postbox__share m-social mb-80">
                       <h5>The share</h5>
@@ -113,7 +74,7 @@
                    </div>
                    <div class="postbox__author-3 d-sm-flex grey-bg-2 mb-85">
                       <div class="postbox__author-thumb-3 mr-20">
-                         <img src="assets/img/blog/author/blog-author-5.jpg" alt="">
+                         <img src="{% static 'assets/img/blog/author/blog-author-5.jpg' %}" alt="">
                       </div>
                       <div class="postbox__author-content">
                          <h4>Justin Case</h4>
@@ -121,106 +82,11 @@
                             smashing cheeky pear shaped, mufty super.</p>
                       </div>
                    </div>
-                   <div class="postbox__recent mb-60">
-                      <h4>Recent Posts</h4>
-
-                      <div class="row">
-                         <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-6">
-                            <div class="blog__single-2 white-bg mb-30">
-                               <div class="blog__thumb-2 w-img mb-20">
-                                  <a href="blog-details.html">
-                                     <img src="assets/img/blog/blog-5.jpg" alt="">
-                                  </a>
-                               </div>
-                               <div class="blog__content-2">
-                                  <div class="postbox__meta d-flex">
-                                     <div class="postbox__tag-2">
-                                        <a href="#">Digital,</a>
-                                        <a href="#">Marketing. </a>
-                                     </div>
-                                     <div class="postbox__time">
-                                        <span>4 min read</span>
-                                     </div>
-                                  </div>
-                                  <h3 class="blog__title-2"><a href="blog-details.html">How to build outside links for your shop SEO</a></h3>
-                                  <p>Jeffrey arse over tit give us a bell old posh morish wellies cheeky.</p>
-                                  <a href="blog-details.html" class="link-btn"><i class="fal fa-arrow-right"></i>read more</a>
-                               </div>
-                            </div>
-                         </div>
-                         <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-6">
-                            <div class="blog__single-2 white-bg mb-30">
-                               <div class="blog__thumb-2 w-img mb-20">
-                                  <a href="blog-details.html">
-                                     <img src="assets/img/blog/blog-6.jpg" alt="">
-                                  </a>
-                               </div>
-                               <div class="blog__content-2">
-                                  <div class="postbox__meta d-flex">
-                                     <div class="postbox__tag-2">
-                                        <a href="#">Personal,</a>
-                                        <a href="#">Stories. </a>
-                                     </div>
-                                     <div class="postbox__time">
-                                        <span> 6 min read</span>
-                                     </div>
-                                  </div>
-                                  <h3 class="blog__title-2"><a href="blog-details.html">How to get your handmade website found on Google</a></h3>
-                                  <p>Jeffrey arse over tit give us a bell old posh morish wellies cheeky.</p>
-                                  <a href="blog-details.html" class="link-btn"><i class="fal fa-arrow-right"></i> read more</a>
-                               </div>
-                            </div>
-                         </div>
-                      </div>
-                   </div>
-                   <div class="latest-comments mb-55">
-                      <h3 >2 Comments</h3>
-                      <ul>
-                         <li>
-                            <div class="comments-box grey-bg-2">
-                               <div class="comments-info d-flex">
-                                     <div class="comments-avatar mr-15">
-                                           <img src="assets/img/product/support/sup-1.jpg" alt="">
-                                     </div>
-                                     <div class="avatar-name">
-                                        <h5>Jason Response</h5>
-                                        <span class="post-meta"> March 24, 2020 at 12:23 pm</span>
-                                     </div>
-                               </div>
-                               <div class="comments-text ml-65">
-                                  <p>Up the duff a gosh cup of tea lemon squeezy bleeder victoria sponge haggle, cheers wellies bugger hotpot vagabond spiffing.!</p>
-                                  <div class="comments-replay">
-                                     <a href="#"><i class="fal fa-reply"></i>Reply</a>
-                                  </div>
-                               </div>
-                            </div>
-                         </li>
-                         <li class="children">
-                            <div class="comments-box grey-bg-2">
-                               <div class="comments-info d-flex">
-                                     <div class="comments-avatar mr-15">
-                                           <img src="assets/img/product/support/sup-2.jpg" alt="">
-                                     </div>
-                                     <div class="avatar-name">
-                                        <h5>Hilary Ouse</h5>
-                                        <span class="post-meta">April 06, 2021 at 06:19 pm </span>
-                                     </div>
-                               </div>
-                               <div class="comments-text ml-65">
-                                  <p>Nancy boy gutted mate smashing naff hanky panky grub down the pub  lost his bottle, cockup buggered.!</p>
-                                  <div class="comments-replay">
-                                     <a href="#"><i class="fal fa-reply"></i>Reply</a>
-                                  </div>
-                               </div>
-                            </div>
-                         </li>
-                      </ul>
-                   </div>
                    <div class="comment__wrapper p-relative white-bg">
                       <div class="comment__shape">
-                         <img class="circle" src="assets/img/icon/sign/circle.png" alt="">
-                         <img class="zigzag" src="assets/img/icon/sign/zigzag.png" alt="">
-                         <img class="dot" src="assets/img/icon/sign/dot.png" alt="">
+                         <img class="circle" src="{% static 'assets/img/icon/sign/circle.png' %}" alt="">
+                         <img class="zigzag" src="{% static 'assets/img/icon/sign/zigzag.png' %}" alt="">
+                         <img class="dot" src="{% static 'assets/img/icon/sign/dot.png' %}" alt="">
                       </div>
                       <h3>Post a comment</h3>
                       <p>Jolly good bevvy butty it's all gone to pot that quaint so I said cheers.</p>
@@ -308,7 +174,7 @@
                             <div class="rc__post-wrapper">
                                <div class="rc__post d-flex align-items-center">
                                   <div class="rc__thumb mr-15">
-                                     <a href="blog-details.html"><img src="assets/img/blog/sm/blog-sm-1.jpg" alt=""></a>
+                                     <a href="blog-details.html"><img src="{% static 'assets/img/blog/sm/blog-sm-1.jpg' %}" alt=""></a>
                                   </div>
                                   <div class="rc__content">
                                      <div class="rc__meta">
@@ -319,7 +185,7 @@
                                </div>
                                <div class="rc__post d-flex align-items-center">
                                   <div class="rc__thumb mr-15">
-                                     <a href="blog-details.html"><img src="assets/img/blog/sm/blog-sm-2.jpg" alt=""></a>
+                                     <a href="blog-details.html"><img src="{% static 'assets/img/blog/sm/blog-sm-2.jpg' %}" alt=""></a>
                                   </div>
                                   <div class="rc__content">
                                      <div class="rc__meta">
@@ -330,7 +196,7 @@
                                </div>
                                <div class="rc__post d-flex align-items-center">
                                   <div class="rc__thumb mr-15">
-                                     <a href="blog-details.html"><img src="assets/img/blog/sm/blog-sm-3.jpg" alt=""></a>
+                                     <a href="blog-details.html"><img src="{% static 'assets/img/blog/sm/blog-sm-3.jpg' %}" alt=""></a>
                                   </div>
                                   <div class="rc__content">
                                      <div class="rc__meta">
@@ -390,4 +256,4 @@
  </main>
 
  
-{% incluide 'footer.html' %}
+{% include 'footer.html' %}
