--- a/templates/cart.html
+++ b/templates/cart.html
@@ -1,5 +1,4 @@
-{% include 'header.html' %} {{carts.template.template_name}}
-
+{% load static %} {% include 'header.html' %} {{carts.template.template_name}}
 <div class="container">
   {% if carts %}
   <div class="row">
@@ -11,7 +10,6 @@
     </div>
   </div>
 
-  
   <div class="row">
     <div class="cartmini__widget">
       <div class="cartmini__inner">
@@ -53,16 +51,15 @@
         </div>
         <div class="col-xxl-12">
           <div class="category__more mt-30 text-center">
-            <a href="" class="m-btn m-btn-2"> <span></span> Checkout</a>
+            <button id="btn" class="m-btn m-btn-2">
+              <span></span> Checkout
+            </button>
           </div>
         </div>
       </div>
     </div>
   </div>
   {% else %}
-
-
-
 
   <div class="row">
     <div class="col-xxl-6 offset-xxl-3 col-xl-6 offset-xl-3">
@@ -74,40 +71,53 @@
   </div>
   <section class="trending__area pt-110 pb-110">
     <div class="container">
-       <div class="row">
-         {% for fet_temp in fet_temp %}
-          <div class="col-xxl-4 col-xl-4 col-lg-6 col-md-6">
-             <div class="trending__item d-sm-flex white-bg mb-30 wow fadeInUp" data-wow-delay=".3s">
-                <div class="trending__thumb mr-25">
-                   <div class="trending__thumb-inner fix">
-                      <a href="{% url 'theme_details' id=fet_temp.id %}">
-                         <img src="{{fet_temp.template_image.url}}" alt="" height="100">
-                      </a>
-                   </div>
+      <div class="row">
+        {% for fet_temp in fet_temp %}
+        <div class="col-xxl-4 col-xl-4 col-lg-6 col-md-6">
+          <div
+            class="trending__item d-sm-flex white-bg mb-30 wow fadeInUp"
+            data-wow-delay=".3s"
+          >
+            <div class="trending__thumb mr-25">
+              <div class="trending__thumb-inner fix">
+                <a href="{% url 'theme_details' id=fet_temp.id %}">
+                  <img
+                    src="{{fet_temp.template_image.url}}"
+                    alt=""
+                    height="100"
+                  />
+                </a>
+              </div>
+            </div>
+            <div class="trending__content">
+              <h3 class="trending__title">
+                <a href="{% url 'theme_details' id=fet_temp.id %}"
+                  >Zibber WP Theme</a
+                >
+              </h3>
+              <p>Knees up arse blimey say happy days.</p>
+              <div class="trending__meta d-flex justify-content-between">
+                <div class="trending__tag">
+                  <a href="#">{{fet_temp.category.category}}</a>
                 </div>
-                <div class="trending__content">
-                   <h3 class="trending__title"><a href="{% url 'theme_details' id=fet_temp.id %}">Zibber WP Theme</a></h3>
-                   <p>Knees up arse blimey say happy days.</p>
-                   <div class="trending__meta d-flex justify-content-between">
-                      <div class="trending__tag">
-                         <a href="#">{{fet_temp.category.category}}</a>
-                      </div>
-                      <div class="trending__price">
-                         <span>${{fet_temp.template_price}}</span>
-                      </div>
-                   </div>
+                <div class="trending__price">
+                  <span>${{fet_temp.template_price}}</span>
                 </div>
-             </div>
+              </div>
+            </div>
           </div>
-          
-          {% endfor %}
-          <div class="trending__more d-flex justify-content-md-end  mb-50">
-            <a href="{% url 'theme' %}" class="m-btn m-btn-border"><span></span>Explore Templates</a>
-         </div>
-       </div>
+        </div>
+
+        {% endfor %}
+        <div class="trending__more d-flex justify-content-md-end mb-50">
+          <a href="{% url 'theme' %}" class="m-btn m-btn-border"
+            ><span></span>Explore Templates</a
+          >
+        </div>
+      </div>
     </div>
- </section>
+  </section>
   {% endif %}
 </div>
-
 {% include 'footer.html' %}
+<script src="{% static 'khalti/app.js' %}"></script>
