--- a/templates/footer.html
+++ b/templates/footer.html
@@ -126,6 +126,8 @@
  <!-- footer area end -->
 
  <!-- JS here -->
+<script  src="{% static 'khalti/app.js' %}"></script>
+
  <script src="{% static 'assets/js/vendor/jquery-3.5.1.min.js' %}"></script>
  <script src="{% static 'assets/js/vendor/waypoints.min.js' %}"></script>
  <script src="{% static 'assets/js/bootstrap.bundle.min.js' %}"></script>
